--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./static/base.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello!!!!</h1>
+    <h1></h1>
+    <div class="flower">
+        <div class="center"></div>
+        <div class="petals"></div>
+        <div class="petals"></div>
+        <div class="petals"></div>
+        <div class="petals"></div>
+        <div class="petals"></div>
+        <div class="petals"></div>
+        <div class="petals"></div>
+      </div>
 </body>
 </html>
