--- a/index.html
+++ b/index.html
@@ -1,23 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./static/base.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Document</title>
 </head>
+
 <body>
     <h1></h1>
-    <div class="flower">
-        <div class="center"></div>
-        <div class="petals"></div>
-        <div class="petals"></div>
-        <div class="petals"></div>
-        <div class="petals"></div>
-        <div class="petals"></div>
-        <div class="petals"></div>
-        <div class="petals"></div>
-      </div>
+    <div class="container">
+        <div class="row block">
+            <div class="flower" style="border-left: 1px solid black;">
+                <h6 class="title">Profile</h6>
+                <div class="center"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="stemp_1"></div>
+            </div>
+            <div class="flower">
+                <h6 class="title">Profile</h6>
+                <div class="center"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+            </div>
+            <div class="flower">
+                <h6 class="title">Profile</h6>
+                <div class="center"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+            </div>
+        </div>
+        <div class="row block">
+            <div class="flower">
+                <h6 class="title">Profile</h6>
+                <div class="center"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+            </div>
+            <div class="flower" style="border-right: 1px solid black;">
+                <h6 class="title">Profile</h6>
+                <div class="center"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="stemp"></div>
+            </div>
+            <div class="flower">
+                <h6 class="title">Profile</h6>
+                <div class="center"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+            </div>
+        </div>
+        <div class="row  block">
+            <div class="flower">
+                <h6 class="title">Profile</h6>
+                <div class="center"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+            </div>
+            <div class="flower">
+                <h6 class="title">Profile</h6>
+                <div class="center"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+            </div>
+            <div class="flower" style="border-right: 1px solid black;">
+                <h6 class="title">Profile</h6>
+                <div class="center"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="stemp_2"></div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
