Delete stemps, add hover to .flower

--- a/index.html
+++ b/index.html
@@ -12,21 +12,11 @@
 </head>
 
 <body>
-    <h1></h1>
+    <span>
+        <h1>Greta Baliunaite</h1>
+    </span>
     <div class="container">
         <div class="row block">
-            <div class="flower" style="border-left: 1px solid black;">
-                <h6 class="title">Profile</h6>
-                <div class="center"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="stemp_1"></div>
-            </div>
             <div class="flower">
                 <h6 class="title">Profile</h6>
                 <div class="center"></div>
@@ -39,7 +29,18 @@
                 <div class="petals"></div>
             </div>
             <div class="flower">
-                <h6 class="title">Profile</h6>
+                <h6 class="title">smth</h6>
+                <div class="center"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+            </div>
+            <div class="flower">
+                <h6 class="title"></h6>
                 <div class="center"></div>
                 <div class="petals"></div>
                 <div class="petals"></div>
@@ -62,8 +63,8 @@
                 <div class="petals"></div>
                 <div class="petals"></div>
             </div>
-            <div class="flower" style="border-right: 1px solid black;">
-                <h6 class="title">Profile</h6>
+            <div class="flower">
+                <h6 class="title">GitHub</h6>
                 <div class="center"></div>
                 <div class="petals"></div>
                 <div class="petals"></div>
@@ -72,7 +73,6 @@
                 <div class="petals"></div>
                 <div class="petals"></div>
                 <div class="petals"></div>
-                <div class="stemp"></div>
             </div>
             <div class="flower">
                 <h6 class="title">Profile</h6>
@@ -109,7 +109,7 @@
                 <div class="petals"></div>
                 <div class="petals"></div>
             </div>
-            <div class="flower" style="border-right: 1px solid black;">
+            <div class="flower">
                 <h6 class="title">Profile</h6>
                 <div class="center"></div>
                 <div class="petals"></div>
@@ -119,7 +119,6 @@
                 <div class="petals"></div>
                 <div class="petals"></div>
                 <div class="petals"></div>
-                <div class="stemp_2"></div>
             </div>
         </div>
     </div>
