--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 </head>
 
 <body>
-    <span>
-        <h1>Greta Baliunaite</h1>
-    </span>
     <div class="container">
+        <span class="row">
+            <h1>Greta Baliunaite</h1>
+        </span>
         <div class="row block">
-            <div class="flower">
+            <div class="preview">
+            </div>
+            <div class="flower target">
                 <h6 class="title">Profile</h6>
                 <div class="center"></div>
                 <div class="petals"></div>
@@ -29,7 +31,7 @@
                 <div class="petals"></div>
             </div>
             <div class="flower">
-                <h6 class="title">smth</h6>
+                <h6 class="title">Projects</h6>
                 <div class="center"></div>
                 <div class="petals"></div>
                 <div class="petals"></div>
@@ -39,7 +41,7 @@
                 <div class="petals"></div>
                 <div class="petals"></div>
             </div>
-            <div class="flower">
+            <div class="d-none d-md-flex d-lg-flex flower1">
                 <h6 class="title"></h6>
                 <div class="center"></div>
                 <div class="petals"></div>
@@ -52,8 +54,8 @@
             </div>
         </div>
         <div class="row block">
-            <div class="flower">
-                <h6 class="title">Profile</h6>
+            <div class="d-none d-md-flex d-lg-flex flower1">
+                <h6 class="title"></h6>
                 <div class="center"></div>
                 <div class="petals"></div>
                 <div class="petals"></div>
@@ -74,8 +76,8 @@
                 <div class="petals"></div>
                 <div class="petals"></div>
             </div>
-            <div class="flower">
-                <h6 class="title">Profile</h6>
+            <div class="d-none d-md-flex d-lg-flex flower1">
+                <h6 class="title"></h6>
                 <div class="center"></div>
                 <div class="petals"></div>
                 <div class="petals"></div>
@@ -86,9 +88,20 @@
                 <div class="petals"></div>
             </div>
         </div>
-        <div class="row  block">
-            <div class="flower">
-                <h6 class="title">Profile</h6>
+        <div class="row block">
+            <div class="d-none d-md-flex d-lg-flex flower1">
+                <h6 class="title"></h6>
+                <div class="center"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+                <div class="petals"></div>
+            </div>
+            <div class="d-none d-md-flex d-lg-flex flower1">
+                <h6 class="title"></h6>
                 <div class="center"></div>
                 <div class="petals"></div>
                 <div class="petals"></div>
@@ -99,18 +112,7 @@
                 <div class="petals"></div>
             </div>
             <div class="flower">
-                <h6 class="title">Profile</h6>
-                <div class="center"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-            </div>
-            <div class="flower">
-                <h6 class="title">Profile</h6>
+                <h6 class="title">Life story</h6>
                 <div class="center"></div>
                 <div class="petals"></div>
                 <div class="petals"></div>
@@ -122,6 +124,7 @@
             </div>
         </div>
     </div>
+    <script type="text/javaScript" src="static/script.js"></script>
 </body>
 
 </html>
