--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
             <h1>Greta Baliunaite</h1>
         </span>
         <div class="row block">
-            <div class="preview">
-            </div>
-            <div class="flower target">
+            <div class="previewProfile"></div>
+            <div class="flower target1">
                 <h6 class="title">Profile</h6>
                 <div class="center"></div>
                 <div class="petals"></div>
@@ -30,7 +29,8 @@
                 <div class="petals"></div>
                 <div class="petals"></div>
             </div>
-            <div class="flower">
+            <div class="previewProjects"></div>
+            <div class="flower target2">
                 <h6 class="title">Projects</h6>
                 <div class="center"></div>
                 <div class="petals"></div>
@@ -65,7 +65,8 @@
                 <div class="petals"></div>
                 <div class="petals"></div>
             </div>
-            <div class="flower">
+            <div class="previewGit"></div>
+            <div class="flower target">
                 <h6 class="title">GitHub</h6>
                 <div class="center"></div>
                 <div class="petals"></div>
@@ -111,7 +112,8 @@
                 <div class="petals"></div>
                 <div class="petals"></div>
             </div>
-            <div class="flower">
+            <div class="previewStory"></div>
+            <div class="flower target3">
                 <h6 class="title">Life story</h6>
                 <div class="center"></div>
                 <div class="petals"></div>
