--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </span>
         <div class="row block">
             <div class="previewProfile"></div>
+            <a href="/profile.html">
             <div class="flower target1">
                 <h6 class="title">Profile</h6>
                 <div class="center"></div>
@@ -29,6 +30,7 @@
                 <div class="petals"></div>
                 <div class="petals"></div>
             </div>
+            </a>
             <div class="previewProjects"></div>
             <div class="flower target2">
                 <h6 class="title">Projects</h6>
