Add folder CurriculumVitae/

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </span>
         <div class="row block">
             <div class="previewProfile"></div>
-            <a href="/profile.html">
+            <a href="CurriculumVitae/profile.html">
             <div class="flower target1">
                 <h6 class="title">Profile</h6>
                 <div class="center"></div>
