Add other two portfolios in projects.html

--- a/CurriculumVitae/projects.html
+++ b/CurriculumVitae/projects.html
@@ -1,37 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Projects</title>
 </head>
+
 <body>
-    <h1>Projects in GitHub</h1>
+    <h1 class="m-5">Projects in GitHub</h1>
 
-    <h3>Portfolio 1 presented for Code Institute</h3>
-    <a href="https://github.com/gretazas/portfolio_1">Play with Algi kids party planner</a>
-    <p>This portfolio was my first ever created website, I had a minimal experience with HTML and CSS. 
-        I like spending time with kids so the project was close to my heart. 
-        I imagined if I would have a similar business that would be the kind of website I would like to have.
-    </p>
+    <div class="m-5 p-5">
+        <h3>Portfolio 5 for Code Institute</h3>
+        <a href="https://github.com/gretazas/alphaSchooler">E-commers site</a>
+        <p>
+            
+        </p>
 
-    <h3>Portfolio 2 for Code Institute</h3>
-    <a href="https://github.com/gretazas/black_jack_game">Black Jack Game</a>
-    <p>
-        This portfolio was very exciting, I love JavaScript. 
-        I love riddles in general, which is why I loved the experience I have gained with this portfolio.
-    </p>
+        <h3>Portfolio 4 for Code Institute</h3>
+        <a href="https://github.com/gretazas/inspa" target="_blank">"Inspas"- inspitational post`s page</a>
+        <p>
+            For this page, my biggest inspiration was my daughter. <br>
+            She was diagnosed with type 1 diabetes summer of 2020 and after that, she had severe anxiety. <br>
+            The site's idea is to share different great ideas in different aspects of life. <br>
+            The first time using Django, was very difficult to get around with it. 
 
-    <h3>Portfolio 3 for Code Institute</h3>
-    <a href="https://github.com/gretazas/pyramid">Pyramid Game</a>
-    <p>
-        I loved this portfolio the most because it brought great memories about my mother. we used to play this game together.
-        I never came across this game anywhere in the internet, so it is very unique. 
-        I have tried to google search for rules, just to check if it would be similar to my mother`s version, but couldn`t find this type of game at all.
+        </p>
 
-    </p>
+        <h3>Portfolio 3 for Code Institute</h3>
+        <a href="https://github.com/gretazas/pyramid" target="_blank">Pyramid Game</a>
+        <p>
+            I loved this portfolio the most because it brought great memories about my mother. we used to play this game
+            together.<br>
+            I never came across this game anywhere in the internet, so it is very unique. <br>
+            I have tried to google search for rules, just to check if it would be similar to my mother`s version, but
+            couldn`t find this type of game at all.
 
+        </p>
+
+        <h3>Portfolio 2 for Code Institute</h3>
+        <a href="https://github.com/gretazas/black_jack_game" target="_blank">Black Jack Game</a>
+        <p>
+            This portfolio was very exciting, I love JavaScript. <br>
+            I love riddles in general, which is why I loved the experience I have gained with this portfolio.
+        </p>
+
+        <h3>Portfolio 1 presented for Code Institute</h3>
+        <a href="https://github.com/gretazas/portfolio_1" target="_blank">Play with Algi kids party planner</a>
+        <p>
+            This portfolio was my first ever created website, I had a minimal experience with HTML and CSS. <br>
+            I like spending time with kids so the project was close to my heart. <br>
+            I imagined if I would have a similar business that would be the kind of website I would like to have.
+        </p>
+
+    </div>
 
 </body>
+
 </html>
