--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <span class="row">
-            <h1>Greta Baliunaite</h1>
+            <h1>Greta Baliunaite [🎈IT]</h1>
         </span>
         <div class="row block">
             <div class="previewProfile"></div>
@@ -32,6 +32,7 @@
             </div>
             </a>
             <div class="previewProjects"></div>
+            <a href="CurriculumVitae/projects.html">
             <div class="flower target2">
                 <h6 class="title">Projects</h6>
                 <div class="center"></div>
@@ -43,6 +44,7 @@
                 <div class="petals"></div>
                 <div class="petals"></div>
             </div>
+            </a>
             <div class="d-none d-md-flex d-lg-flex flower1">
                 <h6 class="title"></h6>
                 <div class="center"></div>
