Add preview pics and back to main page links in pages

--- a/CurriculumVitae/profile.html
+++ b/CurriculumVitae/profile.html
@@ -9,7 +9,10 @@
     <title>Profile</title>
 </head>
 <body>
-    <h1 class="m-5">Greta Baliunaite</h1>
+    <div class="d-flex justify-content-between">
+        <h1 class="m-5">Greta Baliunaite</h1>
+        <a href="../index.html" class="m-5 h4 text-decoration-underline">Back to main</a>
+    </div>
     <div class="m-5 p-5">
         <h3>Contact information:</h3>
         <p>
@@ -61,7 +64,7 @@
         <p>
             From the start in Cregana, I've learned so much, and never turned an unread page of information given to me, Brain is a weird mechanism where information can be remembered in the weirdest situations given so sometimes even if I don't understand all of the information it is a great practice to get it in my system.  In some positions, I was presented at my training, While waiting for the instructor, I got glims of a lot of processes related to product development steps and procedures required for the job to be done superbly. 
         </p>
-        
+        <a href="../index.html" class="my-5 h4 text-decoration-underline">Back to main</a>
     </div>
 </body>
 </html>
