--- a/CurriculumVitae/projects.html
+++ b/CurriculumVitae/projects.html
@@ -11,8 +11,10 @@
 </head>
 
 <body>
+    <div class="d-flex justify-content-between">
     <h1 class="m-5">Projects in GitHub</h1>
-
+    <a href="../index.html" class="m-5 h4 text-decoration-underline">Back to main</a>
+    </div>
     <div class="m-5 p-5">
         <h3>Portfolio 5 for Code Institute</h3>
         <a href="https://github.com/gretazas/alphaSchooler">E-commers site</a>
@@ -55,7 +57,7 @@
             I like spending time with kids so the project was close to my heart. <br>
             I imagined if I would have a similar business that would be the kind of website I would like to have.
         </p>
-
+        <a href="../index.html" class="my-5 h4 text-decoration-underline">Back to main</a>
     </div>
 
 </body>
