--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
         <div class="row block">
             <div class="previewProfile"></div>
             <a href="CurriculumVitae/profile.html">
-            <div class="flower target1">
-                <h6 class="title">Profile</h6>
-                <div class="center"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-            </div>
+                <div class="flower target1">
+                    <h6 class="title">Profile</h6>
+                    <div class="center"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                </div>
             </a>
             <div class="previewProjects"></div>
             <a href="CurriculumVitae/projects.html">
-            <div class="flower target2">
-                <h6 class="title">Projects</h6>
-                <div class="center"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-            </div>
+                <div class="flower target2">
+                    <h6 class="title">Projects</h6>
+                    <div class="center"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                </div>
             </a>
             <div class="d-none d-md-flex d-lg-flex flower1">
                 <h6 class="title"></h6>
@@ -70,17 +70,19 @@
                 <div class="petals"></div>
             </div>
             <div class="previewGit"></div>
-            <div class="flower target">
-                <h6 class="title">GitHub</h6>
-                <div class="center"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-            </div>
+            <a target="_blank" href="https://github.com/gretazas">
+                <div class="flower target">
+                    <h6 class="title">GitHub</h6>
+                    <div class="center"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                </div>
+            </a>
             <div class="d-none d-md-flex d-lg-flex flower1">
                 <h6 class="title"></h6>
                 <div class="center"></div>
