Add my story.html

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
             <div class="previewStory"></div>
             <div class="flower target3">
-                <h6 class="title">Life story</h6>
+                <h6 class="title">My story</h6>
                 <div class="center"></div>
                 <div class="petals"></div>
                 <div class="petals"></div>
