Add info to cv-profile

--- a/CurriculumVitae/mystory.html
+++ b/CurriculumVitae/mystory.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>My Story</title>
 </head>
 <body>
     <div class="d-flex justify-content-between">
-        <h1 class="m-5">Greta Baliunaite</h1>
+        <h1 class="m-5">A bit of my life...</h1>
         <a href="../index.html" class="m-5 h4 text-decoration-underline">Back to main</a>
     </div>
     <div class="m-5 p-5">
