--- a/CurriculumVitae/profile.html
+++ b/CurriculumVitae/profile.html
@@ -9,9 +9,12 @@
     <title>Profile</title>
 </head>
 <body>
-    <div class="d-flex justify-content-between">
-        <h1 class="m-5">Greta Baliunaite</h1>
+    <div class="d-flex justify-content-between mx-5">
+        <h1 class="m-5">Greta Baliunaite </h1>
         <a href="../index.html" class="m-5 h4 text-decoration-underline">Back to main</a>
+    </div>
+    <div class="mx-5">
+        <h5 class="mx-5">Junior Fullstack Software Developer</h5>
     </div>
     <div class="m-5 p-5">
         <h3>Contact information:</h3>
@@ -20,20 +23,29 @@
         <br>
             📧 greta.baliunaite@gmail.com 
         </p>
+        <p>
+            ☛ <a href="https://www.linkedin.com/in/gretazas" target="_blank">https://www.linkedin.com/in/gretazas</a>
+        </p>
         <h3>EDUCATION:</h3>
         <p>
-            2004 finished “Ausros gymnasium” in Kaunas, Lithuania. 
+            2004 finished “Ausros gymnasium” in Kaunas, Lithuania. <br>
             2022 - 2023 Code Institute “Diploma in Software Development
                                                             (E-commerce Applications)”
         </p>
         <h3>WORK EXPERIENCE:</h3>
         <p>
-            2004- 2021 May: Work at Supermac`s Tuam. 
+            2004- 2021 May: Work at Supermac`s Tuam. <br>
             2023 Jan - present: Te Connectivity Galway, Product builder(Mandreling)
         </p>
         <h3>KEY SKILLS:</h3>
         
         <h5>Exceptional interpersonal skills, including:</h5>
+        <p>
+            Technologies: HTML5, CSS3, JavaScript, Pathon <br>
+            Databases: MySql, Postgres <br>
+            Frameworks: Django, Bootstrap <br>
+
+        </p>
         <p>
             • Fluent English communication(written and spoken)<br>
             • outstanding customer service skills <br>
@@ -41,6 +53,14 @@
             • confidence, energy, and professionalism <br>
             • patience <br>
             • concentration
+        </p>
+        <p>
+            <h5>Out of the box thinking:</h5>
+            • In my last portfolio, 
+            I came up with the unique idea to have three different columns with different categories and the ability to match the colors of products:  
+            school bags, pencil-case, and all the other products in the third column.<br>
+            • My third portfolio for Code Institute is the game that we used to play with my mom and as far as I know, doesn't exist on the internet.
+
         </p>
         <h5>Valuable team player:</h5>
         <p>
