--- a/index.html
+++ b/index.html
@@ -119,17 +119,19 @@
                 <div class="petals"></div>
             </div>
             <div class="previewStory"></div>
-            <div class="flower target3">
-                <h6 class="title">My story</h6>
-                <div class="center"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-                <div class="petals"></div>
-            </div>
+            <a href="CurriculumVitae/mystory.html">
+                <div class="flower target3">
+                    <h6 class="title">My story</h6>
+                    <div class="center"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                    <div class="petals"></div>
+                </div>
+            </a>
         </div>
     </div>
     <script type="text/javaScript" src="static/script.js"></script>
