--- a/CurriculumVitae/profile.html
+++ b/CurriculumVitae/profile.html
@@ -24,7 +24,7 @@
             📧 greta.baliunaite@gmail.com 
         </p>
         <p>
-            ☛ <a href="https://www.linkedin.com/in/gretazas" target="_blank">https://www.linkedin.com/in/gretazas</a>
+            ☛ <a href="https://www.linkedin.com/in/gretazas" target="_blank">https://www.linkedin.com/in/gretazas</a> <br>
             ☛ <a href="https://www.credential.net/032c53f3-a7d1-46fd-b615-3a7f912792f2#gs.6864yr" target="_blank">Code Institute Diploma</a>
         </p>
         <h3>EDUCATION:</h3>
