--- a/CurriculumVitae/profile.html
+++ b/CurriculumVitae/profile.html
@@ -24,7 +24,7 @@
             📧 greta.baliunaite@gmail.com 
         </p>
         <p>
-            ☛ <a href="https://www.linkedin.com/in/gretazas" target="_blank">https://www.linkedin.com/in/gretazas</a> <br>
+            ☛ <a href="https://www.linkedin.com/in/gretazas" target="_blank">https://www.linkedin.com/in/gretazas</a> <br />
             ☛ <a href="https://www.credential.net/032c53f3-a7d1-46fd-b615-3a7f912792f2#gs.6864yr" target="_blank">Code Institute Diploma</a>
         </p>
         <h3>EDUCATION:</h3>
@@ -49,6 +49,8 @@
         </p>
         <p>
             • Fluent English communication(written and spoken)<br>
+            • Basic Russian communication(written and spoken)<br>
+            • Begginers Portuguese communication(written and spoken)<br>
             • outstanding customer service skills <br>
             • persuasiveness <br>
             • confidence, energy, and professionalism <br>
