--- a/CurriculumVitae/profile.html
+++ b/CurriculumVitae/profile.html
@@ -48,9 +48,9 @@
 
         </p>
         <p>
-            • Fluent English communication(written and spoken)<br>
-            • Basic Russian communication(written and spoken)<br>
-            • Begginers Portuguese communication(written and spoken)<br>
+            • fluent English communication(written and spoken)<br>
+            • basic Russian communication(written and spoken)<br>
+            • begginers Portuguese communication(written and spoken)<br>
             • outstanding customer service skills <br>
             • persuasiveness <br>
             • confidence, energy, and professionalism <br>
