--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <title>CurriculumVitae</title>
 </head>
 
-<body>
-    <div class="container">
-        <span class="row">
+<body class="d-flex align-items-center justify-content-center">
+    <div class="container-body">
+    
+        <span class="row m-2 pt-5">
             <h1>Greta Baliunaite [🎈IT]</h1>
         </span>
+        <div class="container m-2">
         <div class="row block">
             <div class="previewProfile"></div>
             <a href="CurriculumVitae/profile.html">
@@ -134,6 +136,7 @@
             </a>
         </div>
     </div>
+</div>
     <script type="text/javaScript" src="static/script.js"></script>
 </body>
 
