mystory.html change title sze on smaller screen

--- a/CurriculumVitae/mystory.html
+++ b/CurriculumVitae/mystory.html
@@ -10,10 +10,11 @@
 </head>
 <body>
     <div class="d-flex justify-content-between">
-        <h1 class="m-5">A bit of my life...</h1>
-        <a href="../index.html" class="m-5 h4 text-decoration-underline">Back to main</a>
+        <h1 class="m-5 d-none d-md-block">A bit of my life...</h1>
+        <h4 class="m-4 d-md-none">A bit of my life...</h4>
+        <a href="../index.html" class="m-md-5 m-sm-1 h4 text-decoration-underline">Back to main</a>
     </div>
-    <div class="m-5 p-5">
+    <div class="m-md-5 p-1 m-4">
         <p>
         I was born in Lithuania. Grew up in Kaunas, the main street of the second-biggest town in the country. 
         My mother was born there before me. She finished the highest school of computer programming at that time. 
