--- a/CurriculumVitae/profile.html
+++ b/CurriculumVitae/profile.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <div class="d-flex justify-content-between mx-5">
-        <h1 class="m-5">Greta Baliunaite </h1>
-        <a href="../index.html" class="m-5 h4 text-decoration-underline">Back to main</a>
+        <h1 class="m-md-5 m-sm-1">Greta Baliunaite </h1>
+        <a href="../index.html" class="m-md-5 h4 text-decoration-underline m-sm-1">Back to main</a>
     </div>
-    <div class="mx-5">
+    <div class="mx-md-5 m-sm-1">
         <h5 class="mx-5">Junior Fullstack Software Developer</h5>
     </div>
-    <div class="m-5 p-5">
+    <div class="m-md-5 p-5 m-sm-1">
         <h3>Contact information:</h3>
         <p>
             ☎ +353 87 2430 539 
