--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span class="row m-2 pt-5">
             <h1>Greta Baliunaite [🎈IT]</h1>
         </span>
-        <div class="container m-2">
+        <div style="border: solid black 4px; border-radius: 5px;" class="container m-2">
         <div class="row block">
             <div class="previewProfile"></div>
             <a href="CurriculumVitae/profile.html">
