--- a/CurriculumVitae/projects.html
+++ b/CurriculumVitae/projects.html
@@ -12,10 +12,10 @@
 
 <body>
     <div class="d-flex justify-content-between">
-    <h1 class="m-5">Projects in GitHub</h1>
+    <h1 class="m-md-5 ml-3 mt-5">Projects in GitHub</h1>
     <a href="../index.html" class="m-5 h4 text-decoration-underline">Back to main</a>
     </div>
-    <div class="m-5 p-5">
+    <div class="m-md-5 m-3 p-1">
         <h3>Portfolio 5 for Code Institute</h3>
         <a href="https://github.com/gretazas/alphaSchooler">E-commers site</a>
         <p>
