--- a/CurriculumVitae/projects.html
+++ b/CurriculumVitae/projects.html
@@ -17,13 +17,13 @@
     </div>
     <div class="m-md-5 m-3 p-1">
         <h3>Portfolio 5 for Code Institute</h3>
-        <a href="https://github.com/gretazas/alphaSchooler">E-commers site</a>
+        <a href="https://github.com/gretazas/alphaSchooler">E-commerce site</a>
         <p>
             
         </p>
 
         <h3>Portfolio 4 for Code Institute</h3>
-        <a href="https://github.com/gretazas/inspa" target="_blank">"Inspas"- inspitational post`s page</a>
+        <a href="https://github.com/gretazas/inspa" target="_blank">"Inspas"- inspitational post page</a>
         <p>
             For this page, my biggest inspiration was my daughter. <br>
             She was diagnosed with type 1 diabetes summer of 2020 and after that, she had severe anxiety. <br>
