Some sentance structure change

--- a/CurriculumVitae/projects.html
+++ b/CurriculumVitae/projects.html
@@ -28,7 +28,7 @@
             For this page, my biggest inspiration was my daughter. <br>
             She was diagnosed with type 1 diabetes summer of 2020 and after that, she had severe anxiety. <br>
             The site's idea is to share different great ideas in different aspects of life. <br>
-            The first time using Django, was very difficult to get around with it. 
+            This was the first time I used Django, it was very difficult to get around it. 
 
         </p>
 
