--- a/CurriculumVitae/profile.html
+++ b/CurriculumVitae/profile.html
@@ -36,13 +36,13 @@
         <h3>WORK EXPERIENCE:</h3>
         <p>
             2004- 2021 May: Work at Supermac`s Tuam. <br>
-            2023 Jan - present: Te Connectivity Galway, Product builder(Mandreling)
+            2023 Jan - present: TE Connectivity Galway, Product builder(Mandrelling)
         </p>
         <h3>KEY SKILLS:</h3>
         
         <h5>Exceptional interpersonal skills, including:</h5>
         <p>
-            Technologies: HTML5, CSS3, JavaScript, Pathon <br>
+            Technologies: HTML5, CSS3, JavaScript, Python <br>
             Databases: MySql, Postgres <br>
             Frameworks: Django, Bootstrap <br>
 
@@ -74,18 +74,23 @@
         
         <h4>Good Problem-solving skills, including the following:</h4>
         <p>
-            Throughout the 17 years working at Supermac`s I have learned a lot of new skills. 
-            There are different positions at work that require different sets of skills. 
-            There is a position at the grill: I have learned communication- essential for that position. 
-            Front: up-sale, dealing with customer issues and problems, explaining the menu and different options, organizing big event orders. 
-            Lobby area: conversations with customers, assistance, even learned to deal with stressful situations where customers would be in danger or need medical attention. 
-            Pizza area: teamwork. Orders coming in and out, change in the orders, cancelations. 
-            Management skills: making sure we are always in stock, orders done on time, areas checked through the workday, and organized cleaning. 
-            I am self-motivated and always enthusiastic about work and I get satisfaction from a job well done.
+            Throughout the 17 years working at Supermac`s I have learned a lot of new skills. <br> 
+            There are different positions at work that require different sets of skills. <br> 
+            There is a position at the grill: I have learned communication- essential for that position. <br> 
+            Front: up-sale, dealing with customer issues and problems, explaining the menu and different options, organizing big event orders. <br> 
+            Lobby area: conversations with customers, assistance, even learned to deal with stressful situations where customers would be in danger or need medical attention. <br> 
+            Pizza area: teamwork. Orders coming in and out, change in the orders, cancelations. <br> 
+            Management skills: making sure we are always in stock, orders done on time, areas checked through the workday, and organized cleaning. <br> 
+            I am self-motivated and always enthusiastic about work and I get satisfaction from a job well done. <br> 
         </p>
         <h4>Thirst for knowledge and education:</h4>
         <p>
-            From the start in Cregana, I've learned so much, and never turned an unread page of information given to me, Brain is a weird mechanism where information can be remembered in the weirdest situations given so sometimes even if I don't understand all of the information it is a great practice to get it in my system.  In some positions, I was presented at my training, While waiting for the instructor, I got glims of a lot of processes related to product development steps and procedures required for the job to be done superbly. 
+            From the start in Cregana, I've learned so much, and never turned an unread page of information given to me.
+            In some positions, 
+            I was presented at my training, 
+            While waiting for the instructor, 
+            I got glimse of a lot of processes 
+            related to product development steps and procedures required for the job to be done superbly. 
         </p>
         <a href="../index.html" class="my-5 h4 text-decoration-underline">Back to main</a>
     </div>
