Add br in projects.html

--- a/CurriculumVitae/projects.html
+++ b/CurriculumVitae/projects.html
@@ -17,7 +17,7 @@
     </div>
     <div class="m-md-5 m-3 p-1">
         <h3>Portfolio 5 for Code Institute</h3>
-        <a href="https://aschooler.herokuapp.com">E-commerce site</a>
+        <a href="https://aschooler.herokuapp.com">E-commerce site</a><br>
         <a href="https://github.com/gretazas/alphaSchooler">E-commerce site on GitHub</a>
         <p>
             
